msa/vivaldi/fe-chat/400-vivaldi-fe-chat-deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-chat-canary
  labels:
    app: fe-chat
    version: 1.1.0
    release: vivaldi
spec:
  selector:
    matchLabels:
      app: fe-chat
      version: 1.1.0
      release: vivaldi
  replicas: 0
  template:
    metadata:
      labels:
        app: fe-chat
        version: 1.1.0
        release: vivaldi
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: fe-chat
        image: docker-registry.default.svc.cluster.local:5000/vivaldi/fe-chat:latest
        imagePullPolicy: "Always"
        ports:
         - containerPort: 8080
        volumeMounts:
        - mountPath: /var/log/LAMP/
          name: lamp-volume
        - mountPath: /etc/localtime
          name: timezone-config
        securityContext:
          privileged: true
#        livenessProbe:
#          httpGet:
#            path: /
#            port: 8080
#          initialDelaySeconds: 30
#          periodSeconds: 10
#        readinessProbe:
#          httpGet:
#            path: /
#            port: 8080
#          initialDelaySeconds: 30
#          periodSeconds: 10
        resources:
          requests:
            cpu: "500m"
            memory: "1250Mi"
          limits:
            cpu: "2000m"
            memory: "1250Mi"
      nodeSelector:
        ktis-node: "true"
      volumes:
      - name: lamp-volume
        hostPath:
          # directory location on host
          path: /var/log/vivaldi/LAMP/
          # this field is optional
          type: DirectoryOrCreate
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
        name: timezone-config
