msa/vivaldi/fe-chat/500-vivaldi-fe-chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-chat
  labels:
    app: fe-chat
    version: 1.0.0
    release: vivaldi
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: fe-chat
